# sus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.rst  justfile  modd.conf  pyproject.toml  setup.py
.github/workflows/: automated_checks.yml
src/: __init__.py  sus.py
src/sus/: sus.py
sus/: sus.py
tests/: __init__.py  test_ensure_dir.py  test_generate_page.py  test_generate_page_params.py  test_generate_sanitize_url.py  test_sus.py
