[tool.poetry]
name = "sus"
version = "1.0.0"
description = "Really simple static website URL shortener"
license = "MIT"
authors = ["Nik Kantar <nik@nkantar.com>"]
readme = "README.rst"
homepage = "https://github.com/nkantar/sus"
repository = "https://github.com/nkantar/sus"
documentation = "https://github.com/nkantar/sus"

keywords = ["static", "url", "shortener"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
  "Typing :: Typed",
]

packages = [
  { include = "src" },
]

include = [
  "LICENSE",
  "README.rst",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-watch = "^4.2.0"
pytest-mock = "^3.2.0"
black = "^20.8b1"
pydocstyle = "^5.1.1"
mypy = "^0.782"
flake8 = "^3.8.3"

[tool.poetry.scripts]
sus = "src.sus:sus"

# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
