[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sus"
version = "1.3.0"
dependencies = []
requires-python = ">=3.9"
authors = [
    {name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "Really simple static website URL shortener"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.scripts]
sus = "src.sus:sus"

[tool.uv]
dev-dependencies = [
    "ruff>=0.0.17",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.11.2",
    "pdbpp>=0.10.3",
]
